# libedbo

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  search.rs
src/model/: institution.rs  mod.rs  regions.rs  university.rs
